# timeless

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  findFMOD.cmake
.github/: copilot-instructions.md
example/: CMakeLists.txt  main.cpp
include/timeless/: all.hpp  core.hpp  cutscene.hpp  entity.hpp  event.hpp  mutex.hpp  resource_loader.hpp  scene.hpp  settings.hpp  thread_pool.hpp  timeless.hpp  timer.hpp
include/timeless/algorithm/: graph.hpp  ud_graph.hpp
include/timeless/components/: animation.hpp  behaviour.hpp  camera.hpp  collider.hpp  component.hpp  event_listener.hpp  font.hpp  keyboard_input_listener.hpp  line.hpp  mesh.hpp  model.hpp  mouse_input_listener.hpp  movement_controller.hpp  node.hpp  node_animation.hpp  particle.hpp  quad.hpp  shader.hpp  skeletal_animation.hpp  sprite.hpp  text.hpp  texture.hpp  transform.hpp
include/timeless/managers/: component_manager.hpp  window_manager.hpp
include/timeless/systems/: animation_system.hpp  camera_system.hpp  cutscene_system.hpp  debug_system.hpp  event_system.hpp  geo_rendering_system.hpp  inventory_system.hpp  keyboard_input_system.hpp  mouse_input_system.hpp  movement_system.hpp  npc_ai_system.hpp  rendering_system.hpp  scene_system.hpp  sound_system.hpp  system.hpp  text_rendering_system.hpp  transform_system.hpp
include/timeless/ui/: ui.hpp
shaders/: color.fs  color.vs  image.fs  image.vs  image_ui.vs  new_shadow.fs  pixelated_screen.fs  reverse_screen.fs  screen.fs  search_screen.fs  shadow_screen.fs  sprite.fs  sprite.vs  sprite_instance.vs  sprite_slice.fs  sprite_slice_instance.fs  sprite_slice_light.fs  sprite_slice_water.fs  sprite_ui.vs  terminal.fs  text.fs  text.vs  wave_screen.fs  webgl_color.fs  webgl_color.vs  webgl_debug.fs  webgl_debug.vs  webgl_decal.fs  webgl_decal.vs  webgl_lighted.fs  webgl_model.fs  webgl_model.vs  webgl_model_color.fs  webgl_model_color.vs  webgl_model_cooktor.fs  webgl_model_cooktor.vs  webgl_model_cooktor_flat.fs  webgl_model_cooktor_instanced.vs  webgl_model_cooktor_normal.fs  webgl_model_phong.fs  (+38 more)
src/: test.cpp
src/timeless/: entity.hpp  event.hpp  graphics.hpp  orchestrator.hpp  resource_loader.hpp  resource_packer.cpp  settings.hpp  timeless.hpp  timer.hpp
src/timeless/algorithm/: graph.hpp  ud_graph.hpp
src/timeless/components/: animation.cpp  animation.hpp  behaviour.hpp  camera.cpp  camera.hpp  collider.hpp  event_listener.hpp  font.cpp  font.hpp  keyboard_input_listener.hpp  line.hpp  mesh.cpp  model.cpp  mouse_input_listener.hpp  movement_controller.hpp  node.hpp  particle.cpp  quad.cpp  quad.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  text.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp
src/timeless/managers/: component_manager.hpp  window_manager.cpp  window_manager.hpp
src/timeless/systems/: animation_system.cpp  animation_system.hpp  camera_system.cpp  debug_system.cpp  event_system.hpp  geo_rendering_system.hpp  inventory_system.cpp  inventory_system.hpp  keyboard_input_system.cpp  keyboard_input_system.hpp  mouse_input_system.cpp  mouse_input_system.hpp  movement_system.cpp  movement_system.hpp  npc_ai_system.cpp  npc_ai_system.hpp  rendering_system.cpp  rendering_system.hpp  sound_system.cpp  sound_system.hpp  system.cpp  system.hpp  text_rendering_system.hpp
src/timeless/ui/: ui.hpp
